# BNK_helper

./: .env.example  README.md  pyproject.toml
data/: knowledge_base.yaml
docs/images/: .gitkeep
school_it_assistant/: __init__.py  assistant.py  cli.py  data.py
school_it_assistant/knowledge_base/images/: README.md
tests/: test_assistant.py
