[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "school-it-assistant"
version = "0.1.0"
description = "Helper for school staff with ready-to-use IT responses"
authors = [{name = "School IT"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["support", "education", "assistant"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
